--- a/Client Stack/EMPN0739_AdityaMaurya/styles.css
+++ b/Client Stack/EMPN0739_AdityaMaurya/styles.css
@@ -1,22 +1,198 @@
-.pbox {
-    display: flex;
+.bottom-heading {
+    text-align: center;
+    font: normal normal 900 28px/34px Lato;
+    letter-spacing: 0px;
+    color: #425656;
+    opacity: 1;
+    font-weight: bold;
+    margin-top: 35px;
+    margin-bottom: 20px;
+  }
+  
+  .bottom-text {
+    text-align: center;
+    font: normal normal normal 16px/22px Lato;
+    letter-spacing: 0px;
+    color: #425656;
+  }
+  
+  #carouselExampleIndicators {
+    position: relative;
+  }
+  
+  
+  .overlay-text {
     position: absolute;
-    top: 683px;
-    left: 126px;
-}
-
-.box {
-    width: 298px;
-    height: 300px;
-    background: transparent url('img/Rectangle 3.svg') 0% 0% no-repeat padding-box;
-    border-radius: 10px;
-    opacity: 0.8;
-}
-
-body {
-    background-color: black;
-}
-
-.sampleheading {
-    width: 217px;
-}
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    background-color: #f2f2f2;
+    color: white;
+    padding: 20px;
+    width: 100%;
+    max-width: 100%;
+    bottom: 0px;
+    border-radius: 0px 0px 10px 10px;
+    opacity: 0.72;
+  }
+  
+  /* Media query for when screen size is md */
+  @media (max-width: 486px) {
+    .overlay-text {
+      top: 20%;
+      /* Adjusted top position for medium screens */
+    }
+  }
+  @media (min-width: 767px)
+  {
+    .iconm 
+    {
+      display: none;
+    }
+    .container-fluid
+    {
+      gap:50px;
+    }
+  }
+  footer {
+    font-size: 12px;
+    color: #425656;
+    margin-top: 30px;
+    padding: 10px;
+  }
+  .upper span {
+    display: block;
+  }
+  
+  .lower {
+    font-weight: bold;
+  }
+  
+  @media (min-width: 486px) and (max-width: 1200px) {
+    .overlay-text {
+      top: 25%;
+      /* Adjusted top position for medium screens */
+    }
+  }
+  .fa-search {
+    font-size: 18px;
+    color: #28a745;
+  }
+  
+  .overlay-text .btn-inside-overlay {
+    border: 1px solid white;
+    padding: 8px 16px;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    background: #885EF0;
+    border-radius: 3px;
+    opacity: 1;
+  }
+  
+  .overlay-text div {
+    text-align: center;
+    /* Center the text content */
+  }
+  
+  .overlay-text h1 {
+    font: normal normal 900 38px/46px Lato;
+    letter-spacing: 0px;
+    color: #425656;
+    opacity: 1;
+  }
+  
+  .overlay-text p {
+    font: normal normal normal 16px/20px Lato;
+    letter-spacing: 0px;
+    color: #425656;
+    opacity: 1;
+  }
+  
+  
+  
+  .btn-bd-primary {
+    
+    --bs-btn-font-weight: 600;
+    --bs-btn-color: var(--bs-white);
+    --bs-btn-bg: var(--bd-violet-bg);
+    --bs-btn-border-color: var(--bd-violet-bg);
+    --bs-btn-hover-color: var(--bs-white);
+    --bs-btn-hover-bg: #{shade-color($bd-violet, 10%)};
+    --bs-btn-hover-border-color: #{shade-color($bd-violet, 10%)};
+    --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
+    --bs-btn-active-color: var(--bs-btn-hover-color);
+    --bs-btn-active-bg: #{shade-color($bd-violet, 20%)};
+    --bs-btn-active-border-color: #{shade-color($bd-violet, 20%)};
+  }
+  
+  h6 {
+    width: 130px;
+    height: 16px;
+    text-align: left;
+    font: normal normal bold 13px/18px Lato;
+    letter-spacing: 0px;
+    color: #425656;
+    opacity: 1;
+  }
+  
+  .list-unstyled {
+    width: 130px;
+    text-align: left;
+    font: normal normal normal 12px/22px Lato;
+    letter-spacing: 0px;
+    color: #425656;
+    opacity: 1;
+  }
+  
+  footer {
+    height: 306px;
+    opacity: 1;
+    width: 100%;
+  }
+  
+  .bg-light {
+    background-color: #F3F1F9 !important;
+  }
+  
+  .with_logo {
+    height: 16px;
+    text-align: left;
+    font: normal normal bold 12px/18px Lato;
+    letter-spacing: 0px;
+    color: #425656;
+    opacity: 1;
+  }
+  
+  @media (max-width: 900px) {
+    .hide-on-mobile {
+      display: none;
+    }
+  
+    .footer {
+      height: 170px;
+      width: 100%;
+    }
+  }
+  
+  .carousel-item {
+    top: 19px;
+    left: 19px;
+    width: 100%;
+    height: 493px;
+  
+    /* UI Properties */
+    background: transparent url('img/Rectangle 38.png') 0% 0% no-repeat padding-box;
+    border-radius: 20px;
+    opacity: 0.52;
+  }
+  
+  .flexi {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .text {
+    color: white
+  }
